# cedt-game-engine-c-final

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
engine/include/engine/: input_system.hpp  window_system.hpp
engine/shaders/: ground.frag  ground.vert  pbr.frag  pbr.vert  shadow.frag  shadow.vert  shadow_cube.frag  shadow_cube.vert  sky.frag  sky.vert  sweep.frag  sweep.vert
engine/src/: input_system.cpp  window_system.cpp
engine/src/input/: input_system.cpp
engine/src/pbr/: animation.cpp  ground_material.cpp  light.cpp  material.cpp  mesh.cpp  mesh_factory.cpp  model.cpp  model_cache.cpp  scene.cpp  shader.cpp  shader_cache.cpp  shadow_map.cpp  standard_material.cpp  sweep_material.cpp  texture.cpp  texture_cache.cpp
engine/src/physics/: collision.cpp  physics_world.cpp  rigid_body.cpp
engine/src/render/: light.cpp  material.cpp  mesh.cpp  mesh_factory.cpp  model.cpp  model_cache.cpp  render_graph.cpp  render_system.cpp  scene.cpp  shadow_map.cpp  standard_material.cpp  texture.cpp  texture_cache.cpp
engine/src/resource/: model_loader.cpp
engine/src/ui/: ui_system.cpp
engine/src/window/: window_system.cpp
game/include/game/: game_summary.hpp  main_game.hpp  title_screen.hpp
game/src/: game_summary.cpp  main.cpp  main_game.cpp  title_screen.cpp
game/src/main_game/: camera.cpp  enemy.cpp  game_camera.cpp  game_state.cpp  map.cpp  model.cpp  perk.cpp  player.cpp  player_animation_controller.cpp  (+2 more)
includes/: input_system.hpp  material.hpp  mesh.hpp  mesh_factory.hpp  scene.hpp  shader.hpp  skeleton.hpp  standard_material.hpp  state.hpp  window.hpp  window_system.hpp
includes/state/: game_summary.hpp  main_game.hpp  title_screen.hpp
shaders/: basic.frag  basic.vert
src/: input_system.cpp  main.cpp  material.cpp  mesh.cpp  mesh_factory.cpp  shader.cpp  standard_material.cpp  window_system.cpp
src/state/: game_summary.cpp  main_game.cpp  title_screen.cpp
(+104 files in other folders)
